--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tigre</title>
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
 
                  <!-- ENCABEZADO -->
-    <header>
-
+    <header class="container-fluid">
+        <div id="border-titulo" class="mt-2"><p id="titulo">CLUB ATLETICO TIGRE</p></div>
     </header>
 
-    <nav>
-
+                    <!-- NAVEGADOR -->
+    <nav class="container-fluid">
+        <a href=""><img id="logo" class="mt-2" src="./assets/img/Escudo_del_Club_Atlético_Tigre_-_2019.svg.png" alt="escudo de tigre"></a>
     </nav>
 
     <aside>
