agrego enlaces al navegador

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
                     <!-- NAVEGADOR -->
     <nav class="container-fluid">
         <a href=""><img id="logo" class="mt-2" src="./assets/img/Escudo_del_Club_Atlético_Tigre_-_2019.svg.png" alt="escudo de tigre"></a>
+        <ul id="nav" class="nav flex-column border border-black">
+            <li class="nav-item">
+              <a class="nav-link active text-black" aria-current="page" href="#">Active</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-black" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-black" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-black">Disabled</a>
+            </li>
+          </ul>
     </nav>
 
     <aside>
