agrego indice para navegar sobre la pagina

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <!-- NAVEGADOR -->
     <nav class="container-fluid">
         <a href=""><img id="logo" class="mt-2" src="./assets/img/Escudo_del_Club_Atlético_Tigre_-_2019.svg.png" alt="escudo de tigre"></a>
+        
         <ul id="nav" class="nav flex-column border border-black">
             <li class="nav-item">
               <a class="nav-link active text-black" aria-current="page" href="#">Active</a>
@@ -33,8 +34,13 @@
           </ul>
     </nav>
 
-    <aside>
-
+    <aside class="container-fluid">
+        <ul id="indice" class="border border-black">
+            <li><a href="">indice</a></li>
+            <li><a href="">indice</a></li>
+            <li><a href="">indice</a></li>
+            <li><a href="">indice</a></li>
+          </ul>
     </aside>
 
     <main>
