--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
           </ul>
     </aside>
 
-    <main>
-
+    <main class="container-fluid">
+        <div id="text-main">
+            <h2>un poco de nosotros</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, excepturi aliquam. Repudiandae ea eaque ipsa enim dolor ducimus repellendus voluptatibus?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quae!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis rerum iusto ut accusamus velit sint non facilis tempora possimus nam!</p>
+        </div>
     </main>
 
     <footer>
