--- a/index.html
+++ b/index.html
@@ -50,6 +50,36 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quae!</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis rerum iusto ut accusamus velit sint non facilis tempora possimus nam!</p>
         </div>
+
+        <div id="carrusel">
+            <h2 class="titulo-main">Tigre Campeon Copa de la Liga 2019</h2>
+            <div id="carouselExampleIndicators" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./assets/img/tigrecampeon.jpg" class="d-block w-100" alt="tigre campeon">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/img/cacheteychino.jpg" class="d-block w-100" alt="cachete y chino">
+                </div>
+                <div class="carousel-item">
+                  <img src="./assets/img/tigre-consagracion-en-la-copa-de-la-superliga-2019.jpg" class="d-block w-100" alt="tigre campeon">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+        </div>
     </main>
 
     <footer>
