agrego imagen en el main

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
         <div id="carrusel">
             <h2 class="titulo-main">Tigre Campeon Copa de la Liga 2019</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non magni animi maiores aperiam tenetur, officia veritatis culpa porro, odit molestias natus fugit beatae, quod praesentium corrupti blanditiis cum laboriosam quae.</p>
             <div id="carouselExampleIndicators" class="carousel slide">
               <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -80,10 +81,15 @@
               </button>
             </div>
         </div>
+
+        <div class="mt-5">
+            <img id="tigre2021" src="./assets/img/tigrecampeon2021.png" alt="tigre campeon 2021">
+        </div>
+
     </main>
 
     <footer>
-         
+         FOOTER
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>    
