agrego otra imagen y texto descriptico en el main

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               </button>
             </div>
         </div>
-
+        
         <div class="mt-5">
             <div id="parrafo-descriptivo">
                 <h2 class="titulo-main">Tigre Campeon B Nacional 2021</h2>
@@ -90,6 +90,15 @@
             </div>
             <img id="tigre2021" src="./assets/img/tigrecampeon2021.png" alt="tigre campeon 2021">
         </div> 
+
+        <div class="mt-3">
+            <div id="parrafo-descriptivo2">
+                <h2 class="titulo-main">Tigre Ascenso B Nacional 2007</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis, nisi officia. Officiis animi facilis voluptas voluptate, exercitationem fuga iusto magnam asperiores libero tenetur sunt vero similique laborum ad placeat. Fugiat.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur officiis, in explicabo fugiat recusandae architecto dignissimos consequuntur id rerum facilis?</p>
+            </div>
+            <img id="tigre2007" src="./assets/img/tigrecampeon2007.png" alt="tigre campeon 2007">
+        </div>
     </main>              
      
 
