agrego enlaces al navegador

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
 
                  <!-- ENCABEZADO -->
-    <header class="container-fluid">
-        <div id="border-titulo" class="mt-2"><p id="titulo">CLUB ATLETICO TIGRE</p></div>
+    <header class="container-fluid row">
+        <div id="border-titulo" class="mt-2 col-sm-12"><p id="titulo">CLUB ATLETICO TIGRE</p></div>
     </header>
 
                     <!-- NAVEGADOR -->
-    <nav class="container-fluid">
+    <nav class="container-fluid row">
         <a href=""><img id="logo" class="mt-2" src="./assets/img/Escudo_del_Club_Atlético_Tigre_-_2019.svg.png" alt="escudo de tigre"></a>
         
         <ul id="nav" class="nav flex-column border border-black">
             <li class="nav-item">
-              <a class="nav-link active text-black" aria-current="page" href="#">Active</a>
+              <a class="nav-link active text-black" aria-current="page" href="./pages/contacto.html">CONTACTO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-black" href="#">Link</a>
@@ -29,7 +29,7 @@
               <a class="nav-link text-black" href="#">Link</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-black">Disabled</a>
+              <a class="nav-link text-black" href="#">Disabled</a>
             </li>
           </ul>
     </nav>
